avoid page breaks inside fig-group only when there's one image

--- a/paged-js/print.css
+++ b/paged-js/print.css
@@ -129,7 +129,7 @@ p {
     border-top: 0 !important;
 }
 
-.fig-group {
+.fig-group:has(img:only-of-type) {
     break-inside: avoid;
 }
 
